--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <script>
         alert("This site is a work in progress! Proceed with caution!");
     </script>
-    <p>Hello.</p>
+    <h1 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Track The Track is In Development! Come back soon! </h1>
 </body>
 </html>
