--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
     <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png?">
     <link rel="manifest" href="images/site.webmanifest?">
     <title>Track The Track</title>
+
+    <style>
+        body {
+          background-color: rgb(255, 95, 74);
+        }
+     </style>
 </head>
 <body>
+    
     <script>
         alert("This site is a work in progress! Proceed with caution!");
     </script>
-    <h1 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Track The Track is In Development! Come back soon! </h1>
+    <h1 style="text-align: center; font-family: Arial, Helvetica, sans-serif; color: rgb(252, 252, 252);">Track The Track is In Development! Come back soon! </h1>
 </body>
 </html>
